--- a/persons-backend/package.json
+++ b/persons-backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "build:ui": "rm -rf build && cd ../../part2/phonebook && npm run build && cp -vr ../../part2/phonebook/build/ ../persons-backend",
     "deploy": "git push heroku master:main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
